# anymal

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  EXPERIMENTS.md  LICENSE  MODAL_SETUP.md  README.md  TRAINING_RUN_BABYSITTING_PLAYBOOK.md  V15_QWEN3.md  V16_QWEN3.md  V17_HARNESS_AND_DATA.md  V18_MIDTRAINING_DATA.md  V2_DEBUG_REPORT_20260429.md  V2_FULL_TRAINING_ARTIFACT_20260428.md  V2_QUALITY_PLAN.md  V2_TRAINING_RUNBOOK.md  V3_ARCHITECTURE_PLAN.md  V4_ARCHITECTURE_PLAN.md  V4_RESEARCH_RECIPE_20260508.md  V5_RESEARCH_PLAN_20260509.md  V6_PLANNER_NEXT_STEPS.md  V8_CORE_LLM_SWAP_RESULTS.md  V8_QWEN3_plan.md  V8_experiment.md  analyze_v2_probe.py  anymalv2.md  anymalv2_plan.md  arch_sxs_inference.py  baseline_predictions.json  chartqa_checkpoint_eval.py  codex.md  compare_inference.py  fix_training.md  gqa_checkpoint_eval.py  modal_inference.py  modal_train.py  modal_v8_llm_swap_smoke.py  modal_viewer.py  model_metadata.py  (+66 more)
configs/: base.yaml  dataset_revisions.json  finetune.yaml  finetune_llava.yaml  finetune_v2.yaml  finetune_v3.yaml  finetune_v4.yaml  finetune_v4_semantic_calibration.yaml  finetune_v5_semantic_calibration.yaml  finetune_v5_semantic_calibration_robust.yaml  pretrain_cc3m.yaml  pretrain_image.yaml  pretrain_v2_alignment.yaml  pretrain_v3_alignment.yaml  pretrain_v3_grounding.yaml  pretrain_v4_alignment.yaml  pretrain_v4_alignment_compact96.yaml  pretrain_v4_alignment_local128.yaml  pretrain_v4_alignment_no2dpos.yaml  pretrain_v4_grounding.yaml  pretrain_v4_grounding_first.yaml
data/: __init__.py  chat_templates.py  data_utils.py  dataset_splitter.py  instruction_dataset.py  laion_dataset.py  multimodal_inputs.py
docs/: REPO_STRUCTURE_MIGRATION.md  STATUS.md  (+3 more)
(+299 files in other folders)
